refactor: add test